layout de paginas

--- a/Index.html
+++ b/Index.html
@@ -11,9 +11,9 @@
     <div class="container__main">
     <header class="menu__index">
         <nav class="buttons">
-            <a href="#">Inicio</a>
-            <a href="#">Serviços</a>
-            <a href="#">Institucional</a>
+            <a href="Index.html">Inicio</a>
+            <a href="Servicos.html">Serviços</a>
+            <a href="Institucional.html">Institucional</a>
         </nav>
     </header>
     <section class="info__1">
@@ -65,12 +65,8 @@
             <div class="button_item1">
                 <h2>Conheça todos serviços</h2>
                 <p class="p__button" >clique no botão abaixo para conhecer nosso catálogo.</p>
-                <button type="button" class="btn btn-dark">EXPERIÊNCIA VIDRO LUX</button>
-            </div>
-            <div class="button_item2">
-
-            </div>
-            
+                <button type="button" class="btn btn-dark"><a href="Servicos.html">EXPERIÊNCIA VIDRO LUX</a></button>
+            </div>     
         </div>
     </section>
 
