--- a/Servicos.html
+++ b/Servicos.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Serviços</title>
 </head>
 <body>
-    Danilo
+    <div class="container__main">
+         <header class="menu__index">
+            <nav class="buttons">
+            <a href="Index.html">Inicio</a>
+            <a href="Servicos.html">Serviços</a>
+            <a href="Institucional.html">Institucional</a>
+        </nav>
+        </header>
+         <footer class="footer__index">  
+            <p>Alpha Solution  &reg; </p>  
+        </footer>
+    </div>
 </body>
 </html>
