Pagina de Apresentacao

--- a/Index.html
+++ b/Index.html
@@ -5,75 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <title>Index</title>
+    <title>Vidro lux</title>
 </head>
 <body>
-    <div class="container__main">
-    <header class="menu__index">
-        <nav class="buttons">
-            <a href="Index.html">Inicio</a>
-            <a href="Servicos.html">Serviços</a>
-            <a href="Institucional.html">Institucional</a>
-        </nav>
-    </header>
-    <section class="info__1">
-       
-        <div class="item__2">
-            <h3>VIDRO LUX</h3>
-            <h4>Soluções em Vidro com Elegância, Segurança e Profissionalismo.</h4>
-            <section class="logo">
-                <img src="img/200x200_certa.png" alt="">
-            </section>         
+    <div class="container__introducao">
+        <div class="texto__introducao">
+            <h1>Seja bem-vindo à Vidro Lux</h1>
+            <h3>Aqui, cada detalhe é feito com cuidado, qualidade e transparência.
+                Estamos prontos para ajudar você a transformar seu espaço com elegância e segurança.</h3>
+            <p>Conheça nossos serviços e solicite seu orçamento.</p>
         </div>
-         
-    </section>
-    <section class="info__2">
-        <div class="item__3">
-            <h3 class="title__item3">
-                Experiência Vidro lux
-            </h3>
-            <p class="infoservicos">
-                 Há mais de 10 anos no mercado, a <strong>Vidro Lux</strong> é referência em soluções de vidro para projetos
-    residenciais e comerciais em São Paulo e região. Atuamos com excelência, acabamento de alto padrão e equipe especializada para transformar suas ideias em realidade com segurança, elegância e inovação.
-            </p>
+        <div class="button__pagIndex">
+            <img src="img/Clique aqui.png" alt="">
+            <button type="button" class="btn btn-light"><a href="Home.html">CONHEÇA NOSSA EXPERIÊNCIA</a></button>
         </div>
-        <div class="item__4">
-            <div class="icons__servicos">
-                <img src="img/Box Elegance.png" alt="">
-                <h4>BOX ELEGANCE</h4>
-            </div>
-            <div class="icons__servicos">
-                <img src="img/Janelas de vidro.png" alt="">
-                <h4>JANELAS DE VIDRO</h4>
-            </div>
-            <div class="icons__servicos">
-                <img src="img/Cobertura de vidro retratil.png" alt="">
-                <h4>COBERTURA RETRATIL</h4>
-            </div>
-        </div>
-    </section>
-    <section class="info__3">
-        <div class="texto__info3">
-            <h1>Vidro com Precisão para Projetos de Alto Padrão</h1>
-            <h3>Soluções sob medida para residências, arquitetos e construtoras.</h3>
-            <p>
-                A <strong>Vidro Lux</strong> é referência em São Paulo quando o assunto é vidro, espelho e alumínio com acabamento impecável.  
-                Com mais de 10 anos de experiência, trabalhamos lado a lado com arquitetos, engenheiros e proprietários para transformar ideias em ambientes elegantes, seguros e modernos.
-            </p>
-        </div>
-        <div class="button__servicos">
-            <div class="button_item1">
-                <h2>Conheça todos serviços</h2>
-                <p class="p__button" >clique no botão abaixo para conhecer nosso catálogo.</p>
-                <button type="button" class="btn btn-dark"><a href="Servicos.html">EXPERIÊNCIA VIDRO LUX</a></button>
-            </div>     
-        </div>
-    </section>
-
-    <footer class="footer__index">  
-    <p>Alpha Solution  &reg; </p>  
-    </footer>
     </div>
-
 </body>
+    <footer class="footer__index">  
+        <p>Alpha Solution  &reg; </p>  
+    </footer>
 </html>
