--- a/Servicos.html
+++ b/Servicos.html
@@ -11,7 +11,7 @@
     <div class="container__main">
          <header class="menu__index">
             <nav class="buttons">
-            <a href="Index.html">Inicio</a>
+            <a href="Home.html">Inicio</a>
             <a href="Servicos.html">Serviços</a>
             <a href="Institucional.html">Institucional</a>
         </nav>
