--- a/Servicos.html
+++ b/Servicos.html
@@ -16,6 +16,16 @@
             <a href="Institucional.html">Institucional</a>
         </nav>
         </header>
+
+        <section class="servicos__card">
+            <div class="card">Card 1</div>
+            <div class="card">Card 2</div>
+            <div class="card">Card 3</div>
+            <div class="card">Card 4</div>
+            <div class="card">Card 5</div>
+            <div class="card">Card 6</div>
+        </section>
+
          <footer class="footer__index">  
             <p>Alpha Solution  &reg; </p>  
         </footer>
