--- a/Servicos.html
+++ b/Servicos.html
@@ -18,12 +18,36 @@
         </header>
 
         <section class="servicos__card">
-            <div class="card">Card 1</div>
-            <div class="card">Card 2</div>
-            <div class="card">Card 3</div>
-            <div class="card">Card 4</div>
-            <div class="card">Card 5</div>
-            <div class="card">Card 6</div>
+            <div class="card">
+                <img src="img/Box Elegance.png" alt="">
+                <h3>BOX ELEGANCE</h3>
+                <p>parágrafo</p>
+            </div>
+            <div class="card">
+                <img src="img/Cobertura de vidro retratil.png" alt="">
+                <h3>COBERTURA RETRATIL</h3>
+                <p>parágrafo</p>
+            </div>
+            <div class="card">
+                <img src="img/Janelas de vidro.png" alt="">
+                <h3>JANELAS DE VIDRO</h3>
+                <p>parágrafo</p>
+            </div>
+            <div class="card">
+                <img src="img/Box Elegance.png" alt="">
+                <h3>texto</h3>
+                <p>parágrafo</p>
+            </div>
+            <div class="card">
+                <img src="img/Box Elegance.png" alt="">
+                <h3>texto</h3>
+                <p>parágrafo</p>
+            </div>
+            <div class="card">
+                <img src="img/Box Elegance.png" alt="">
+                <h3>texto</h3>
+                <p>parágrafo</p>
+            </div>
         </section>
 
          <footer class="footer__index">  
