versao card-servicos

--- a/Servicos.html
+++ b/Servicos.html
@@ -19,7 +19,7 @@
 
         <section class="servicos__card">
             <div class="card">
-                <img src="img/Box Elegance.png" alt="">
+                <img src="img/Box Elegance2.png" alt="">
                 <h3>BOX ELEGANCE</h3>
                 <p>parágrafo</p>
             </div>
@@ -34,18 +34,18 @@
                 <p>parágrafo</p>
             </div>
             <div class="card">
-                <img src="img/Box Elegance.png" alt="">
-                <h3>texto</h3>
+                <img src="img/Envidraçamento de Sacada.png" alt="">
+                <h3>Envidraçamento de Sacada</h3>
                 <p>parágrafo</p>
             </div>
             <div class="card">
-                <img src="img/Box Elegance.png" alt="">
-                <h3>texto</h3>
+                <img src="img/Guarda-Corpo.png" alt="">
+                <h3>GUARDA-CORPO</h3>
                 <p>parágrafo</p>
             </div>
             <div class="card">
-                <img src="img/Box Elegance.png" alt="">
-                <h3>texto</h3>
+                <img src="img/Esquadrias de Alumínio.png" alt="">
+                <h3>ESQUADRIAS DE ALUMÍNIO</h3>
                 <p>parágrafo</p>
             </div>
         </section>
