primeiro layout pagina de servicos

--- a/Servicos.html
+++ b/Servicos.html
@@ -8,7 +8,7 @@
     <title>Serviços</title>
 </head>
 <body>
-    <div class="container__main">
+    <div class="container__main__servicos">
          <header class="menu__index">
             <nav class="buttons">
             <a href="Home.html">Inicio</a>
@@ -17,11 +17,17 @@
         </nav>
         </header>
 
+        <section class="info__servicos">
+            <h2>Soluções em Vidro sob Medida</h2>
+            <p>Transforme seus ambientes com elegância, segurança e transparência.  
+                Encontre o serviço ideal para o seu projeto!</p>
+        </section>
+
         <section class="servicos__card">
             <div class="card">
                 <img src="img/Box Elegance2.png" alt="">
                 <h3>BOX ELEGANCE</h3>
-                <p>parágrafo</p>
+                <p>parágrafo <span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
             </div>
             <div class="card">
                 <img src="img/Cobertura de vidro retratil.png" alt="">
@@ -48,6 +54,10 @@
                 <h3>ESQUADRIAS DE ALUMÍNIO</h3>
                 <p>parágrafo</p>
             </div>
+        </section>
+
+        <section class="componente__servicos">
+
         </section>
 
          <footer class="footer__index">  
