--- a/Servicos.html
+++ b/Servicos.html
@@ -27,32 +27,37 @@
             <div class="card">
                 <img src="img/Box Elegance2.png" alt="">
                 <h3>BOX ELEGANCE</h3>
-                <p>parágrafo <span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
+                <p>ossos modelos são feitos sob medida, com acabamentos modernos que valorizam o ambiente e garantem durabilidade no uso diário.
+                    <span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
             </div>
             <div class="card">
                 <img src="img/Cobertura de vidro retratil.png" alt="">
                 <h3>COBERTURA RETRATIL</h3>
-                <p>parágrafo</p>
+                <p>Proteção contra o tempo sem abrir mão da luz. As coberturas em vidro são ideais para áreas gourmet, varandas e corredores, com estrutura leve e resistente.
+                    <span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
             </div>
             <div class="card">
                 <img src="img/Janelas de vidro.png" alt="">
                 <h3>JANELAS DE VIDRO</h3>
-                <p>parágrafo</p>
+                <p>Conforto, ventilação e segurança com janelas de vidro e sistema maxim-ar. São perfeitas para cozinhas, banheiros e ambientes comerciais.
+                    <span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
             </div>
             <div class="card">
                 <img src="img/Envidraçamento de Sacada.png" alt="">
                 <h3>Envidraçamento de Sacada</h3>
-                <p>parágrafo</p>
+                <p>Conforto e proteção sem perder a vista. O envidraçamento de sacadas melhora o isolamento térmico e acústico, com abertura total ou parcial.<span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
             </div>
             <div class="card">
                 <img src="img/Guarda-Corpo.png" alt="">
                 <h3>GUARDA-CORPO</h3>
-                <p>parágrafo</p>
+                <p>Utilizamos vidros temperados e laminados que garantem proteção sem comprometer a estética.
+                    <span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
             </div>
             <div class="card">
                 <img src="img/Esquadrias de Alumínio.png" alt="">
                 <h3>ESQUADRIAS DE ALUMÍNIO</h3>
-                <p>parágrafo</p>
+                <p>Proteja áreas externas com sistemas de vidro e alumínio que combinam resistência e design. Perfeitos para lavanderias, corredores ou áreas gourmet.
+                    <span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
             </div>
         </section>
 
