--- a/Servicos.html
+++ b/Servicos.html
@@ -27,7 +27,7 @@
             <div class="card">
                 <img src="img/Box Elegance2.png" alt="">
                 <h3>BOX ELEGANCE</h3>
-                <p>ossos modelos são feitos sob medida, com acabamentos modernos que valorizam o ambiente e garantem durabilidade no uso diário.
+                <p>Nossos modelos são feitos sob medida, com acabamentos modernos que valorizam o ambiente e garantem durabilidade no uso diário.
                     <span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
             </div>
             <div class="card">
