--- a/Servicos.html
+++ b/Servicos.html
@@ -18,7 +18,7 @@
         </header>
 
         <section class="info__servicos">
-            <h2>Soluções em Vidro sob Medida</h2>
+            <h2>Soluções em Vidro sob <span class="medida__span">Medida</span></h2>
             <p>Transforme seus ambientes com elegância, segurança e transparência.  
                 Encontre o serviço ideal para o seu projeto!</p>
         </section>
