Card finalizado - v ok

--- a/Servicos.html
+++ b/Servicos.html
@@ -62,7 +62,13 @@
         </section>
 
         <section class="componente__servicos">
-
+            <div class="alert alert-light" role="alert">
+                Transforme seu projeto com quem entende de vidro
+            </div>
+            <div class="info__whatsapp">
+                <h3>Está planejando uma reforma, construção ou deseja apenas modernizar um ambiente? Fale com a nossa equipe e receba um orçamento personalizado, sem compromisso. Atendemos com agilidade, qualidade e soluções sob medida para você ou seu negócio.</h3>
+                <p></p>
+            </div>
         </section>
 
          <footer class="footer__index">  
