nova versao home page

--- a/Home.html
+++ b/Home.html
@@ -64,9 +64,11 @@
         <div class="button__servicos">
             <div class="button_item1">
                 <h2>Conheça todos serviços</h2>
-                <p class="p__button" >clique no botão abaixo para conhecer nosso catálogo.</p>
+                <p class="p__button" >Faça um orçamento ou conheça nossos serviços.</p>
                 <button type="button" class="btn btn-dark"><a href="Servicos.html">EXPERIÊNCIA VIDRO LUX</a></button>
-            </div>     
+                <button type="button" class="whatsapp__Button"><a href="#">FALE CONOSCO</a></button>
+            </div>    
+             
         </div>
     </section>
 
