--- a/Servicos.html
+++ b/Servicos.html
@@ -28,8 +28,17 @@
                 <img src="img/Box Elegance2.png" alt="">
                 <h3>BOX ELEGANCE</h3>
                 <p>Nossos modelos são feitos sob medida, com acabamentos modernos que valorizam o ambiente e garantem durabilidade no uso diário.
-                    <span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
+                    <span class="badge rounded-pill bg-primary"><a id="openModal" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
             </div>
+            
+            <div id="modal" class="modal">
+                <div class="modal__content">
+                    <h2>Exemplo serviço</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, facere ipsum, obcaecati qui animi sed sapiente voluptatem eligendi nihil et, sunt consequuntur <br>doloribus aliquam corrupti magni perferendis eaque. Harum, molestiae.</p>
+                    <span id="closeModal">X</span>
+                </div>
+            </div>
+    
             <div class="card">
                 <img src="img/Cobertura de vidro retratil.png" alt="">
                 <h3>COBERTURA RETRATIL</h3>
@@ -75,5 +84,6 @@
             <p>Alpha Solution  &reg; </p>  
         </footer>
     </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
