atualizacoes homepage-servicos

--- a/Home.html
+++ b/Home.html
@@ -65,10 +65,11 @@
             <div class="button_item1">
                 <h2>Conheça todos serviços</h2>
                 <p class="p__button" >Faça um orçamento ou conheça nossos serviços.</p>
-                <button type="button" class="btn btn-dark"><a href="Servicos.html">EXPERIÊNCIA VIDRO LUX</a></button>
-                <button type="button" class="whatsapp__Button"><a href="https://api.whatsapp.com/send?phone=5511986280730">FALE CONOSCO</a></button>
+                <div class="button__homepage">
+                    <button type="button" class="btn btn-dark"><a href="Servicos.html">EXPERIÊNCIA VIDRO LUX</a></button>
+                    <button type="button" class="whatsapp__Button"><a href="https://api.whatsapp.com/send?phone=5511986280730">FALE CONOSCO</a></button>
+                </div>
             </div>    
-             
         </div>
     </section>
 
