iniciando pagina institucional

--- a/Institucional.html
+++ b/Institucional.html
@@ -7,6 +7,15 @@
     <title>Institucional</title>
 </head>
 <body>
+    <div class="container__institucional">
+         <header class="menu__index">
+            <nav class="buttons">
+                <a href="Home.html">Inicio</a>
+                <a href="Servicos.html">Serviços</a>
+                <a href="Institucional.html">Institucional</a>
+            </nav>
+        </header>
+    </div>
     
 </body>
 </html>
