--- a/Servicos.html
+++ b/Servicos.html
@@ -11,14 +11,14 @@
     <div class="container__main__servicos">
          <header class="menu__index">
             <nav class="buttons">
-            <a href="Home.html">Inicio</a>
-            <a href="Servicos.html">Serviços</a>
-            <a href="Institucional.html">Institucional</a>
-        </nav>
+                <a href="Home.html">Inicio</a>
+                <a href="Servicos.html">Serviços</a>
+                <a href="Institucional.html">Institucional</a>
+            </nav>
         </header>
 
         <section class="info__servicos">
-            <h2>Soluções em Vidro sob <span class="medida__span">Medida</span></h2>
+            <h2><span class="medida__span">Soluções</span> em Vidro sob Medida</h2>
             <p>Transforme seus ambientes com elegância, segurança e transparência.  
                 Encontre o serviço ideal para o seu projeto!</p>
         </section>
@@ -75,13 +75,14 @@
                             <div class="card">
                                 <img src="img/Envidraçamento de Sacada.png" alt="">
                                 <h3>Envidraçamento de Sacada</h3>
-                                <p>Conforto e proteção sem perder a vista. O envidraçamento de sacadas melhora o isolamento térmico e acústico, com abertura total ou parcial.<span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
+                                <p>Conforto e proteção sem perder a vista. O envidraçamento de sacadas melhora o isolamento térmico e acústico, com abertura total ou parcial.<br>
+                                <span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
                             </div>
 
                             <div class="card">
                                 <img src="img/Esquadrias de Alumínio.png" alt="">
                                 <h3>ESQUADRIAS DE ALUMÍNIO</h3>
-                                <p>Proteja áreas externas com sistemas de vidro e alumínio que combinam resistência e design. Perfeitos para lavanderias, corredores ou áreas gourmet.
+                                <p>Proteja áreas externas com sistemas de vidro e alumínio que combinam resistência e design. Perfeitos para lavanderias, corredores ou áreas gourmet.<br>
                                 <span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
                             </div>
                         </div>
@@ -96,7 +97,7 @@
             <div class="alert alert-light" role="alert">
                 Transforme seu projeto com quem entende de vidro
             </div>
-            <div class="info__whatsapp  bg-primary">
+            <div class="info__whatsapp">
                 <h3>Está planejando uma reforma, construção ou deseja apenas modernizar um ambiente? Fale com a nossa equipe e receba um orçamento personalizado, sem compromisso. Atendemos com agilidade, qualidade e soluções sob medida para você ou seu negócio.</h3>
                 <p></p>
             </div>
