--- a/Servicos.html
+++ b/Servicos.html
@@ -36,14 +36,32 @@
                         <div id="card__residencial" class="card__residencial">
                             <div class="card">
                                 <img src="img/Box Elegance2.png" alt="">
-                                <h3>BOX ELEGANCE</h3>
+                                <h3>BOX DE VIDRO</h3>
                                 <p>Nossos modelos são feitos sob medida, com acabamentos modernos que valorizam o ambiente e garantem durabilidade no uso diário.<br>
                                 <span class="badge rounded-pill bg-primary"><a id="openModal" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
                             </div>
                             <div id="modal" class="modal">
                             <div class="modal__content">
-                                <h2>Exemplo serviço</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, facere ipsum, obcaecati qui animi sed sapiente voluptatem eligendi nihil et, sunt consequuntur <br>doloribus aliquam corrupti magni perferendis eaque. Harum, molestiae.</p>
+                                <h2>BOX DE VIDRO</h2>
+                                <section class="carrossel__container">
+                                    <div id="carrossel" class="carrossel">
+                                        <div class="slide__ativo">
+
+                                        </div>
+
+                                        <div class="slide">
+                                            <h3>Box Elegance</h3>
+                                            <img src="img/box-elegance.jpg" alt="box-elegance" srcset="">
+                                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, facere ipsum, obcaecati qui animi sed sapiente voluptatem eligendi nihil et, sunt consequuntur <br>doloribus aliquam corrupti magni perferendis eaque. Harum, molestiae.</p>
+                                        </div>
+
+                                        <div class="slide">
+                                            <h3>BOX FLEX CROMADO</h3>
+                                            <img src="" alt="box-elegance" srcset="">
+                                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, facere ipsum, obcaecati qui animi sed sapiente voluptatem eligendi nihil et, sunt consequuntur <br>doloribus aliquam corrupti magni perferendis eaque. Harum, molestiae.</p>
+                                        </div>
+                                    </div>
+                                </section>                                
                                 <span id="closeModal">X</span>
                                 </div>
                             </div>
@@ -51,7 +69,7 @@
 
                             <div class="card">
                                 <img src="img/Cobertura de vidro retratil.png" alt="">
-                                <h3>COBERTURA RETRATIL</h3>
+                                <h3>COBERTURA DE VIDRO</h3>
                                 <p>Proteção contra o tempo sem abrir mão da luz. As coberturas em vidro são ideais para áreas gourmet, varandas e corredores, com estrutura leve e resistente.<br>
                                 <span class="badge rounded-pill bg-primary"><a href="#" class="badge rounded-pill bg-primary">Saiba mais</a></span></p>
                             </div>
