pagina index style

--- a/Index.html
+++ b/Index.html
@@ -11,9 +11,9 @@
     <div class="container__introducao">
         <div class="texto__introducao">
             <h1>Seja bem-vindo à Vidro Lux</h1>
-            <h3>Aqui, cada detalhe é feito com cuidado, qualidade e transparência.
+            <h3 oncontextmenu="return false;">Aqui, cada detalhe é feito com cuidado, qualidade e transparência.
                 Estamos prontos para ajudar você a transformar seu espaço com elegância e segurança.</h3>
-            <p>Conheça nossos serviços e solicite seu orçamento.</p>
+            <p oncontextmenu="return false;">Conheça nossos serviços e solicite seu orçamento.</p>
         </div>
         <div class="button__pagIndex">
             <img src="img/Clique aqui.png" alt="">
