--- a/Home.html
+++ b/Home.html
@@ -67,8 +67,8 @@
                 <h2>Faça um orçamento ou conheça nossos serviços</h2>
             </div>
                 <div class="button__homepage">
-                    <button type="button" class="btn btn-dark"><a href="Servicos.html">EXPERIÊNCIA VIDRO LUX</a></button>
-                    <button type="button" class="whatsapp__Button"><a href="https://api.whatsapp.com/send?phone=5511986280730">FALE CONOSCO</a></button>
+                    <button type="button" id="button__exp__vidrolux" class="button__exp__vidrolux" onclick="RedirectHomePage()">EXPERIÊNCIA VIDRO LUX</button>
+                    <button type="button" id="button__whatsapp" class="button__whatsapp" onclick="WhatsAppRedirect()">FALE CONOSCO</a></button>
                 </div>
             </div>    
         </div>
@@ -78,6 +78,8 @@
     <p>Alpha Solution  &reg; </p>  
     </footer>
     </div>
+    <script src="js/script.js"></script>
 
 </body>
 </html>
+
