--- a/Institucional.html
+++ b/Institucional.html
@@ -8,12 +8,16 @@
 </head>
 <body>
     <div class="container__institucional">
-         <header class="menu__index">
+        <header class="menu__index">
             <nav class="buttons">
                 <a href="Home.html">Inicio</a>
                 <a href="Servicos.html">Serviços</a>
                 <a href="Institucional.html">Institucional</a>
             </nav>
+            
+            <div class="logo__home">
+                <img src="img/logo-novo.png" width="80px" alt="" srcset="">
+            </div>
         </header>
     </div>
     
