--- a/Servicos.html
+++ b/Servicos.html
@@ -9,12 +9,16 @@
 </head>
 <body>
     <div class="container__main__servicos">
-         <header class="menu__index">
+        <header class="menu__index">
             <nav class="buttons">
                 <a href="Home.html">Inicio</a>
                 <a href="Servicos.html">Serviços</a>
                 <a href="Institucional.html">Institucional</a>
             </nav>
+            
+            <div class="logo__home">
+                <img src="img/logo-novo.png" width="80px" alt="" srcset="">
+            </div>
         </header>
 
         <section class="info__servicos">
@@ -119,6 +123,13 @@
                 <h3>Está planejando uma reforma, construção ou deseja apenas modernizar um ambiente? Fale com a nossa equipe e receba um orçamento personalizado, sem compromisso. Atendemos com agilidade, qualidade e soluções sob medida para você ou seu negócio.</h3>
                 <p></p>
             </div>
+
+            <div class="button__homepage">
+                <button type="button" id="button__whatsapp" class="button__whatsapp" onclick="WhatsAppRedirect()">FALE CONOSCO</a></button>
+            </div>
+
+            </div>    
+        </div>
         </section>
 
          <footer class="footer__index">  
