--- a/Servicos.html
+++ b/Servicos.html
@@ -55,7 +55,7 @@
 
                                         <div class="slide">
                                             <h3>Box Elegance</h3>
-                                            <img src="img/box-elegance.jpg" alt="box-elegance" srcset="">
+                                            <img src="" alt="box-elegance" srcset="">
                                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, facere ipsum, obcaecati qui animi sed sapiente voluptatem eligendi nihil et, sunt consequuntur <br>doloribus aliquam corrupti magni perferendis eaque. Harum, molestiae.</p>
                                         </div>
 
